IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
9/5/12: In eTomo fixed a bug which cause Tomogram Setup to fail when there was
a subdirectory in the target directory.(Bug# 1640)

8/30/12: Supermontaging changes: split Edgepatches into two, with a new program 
Setupstitch to set up the info file.  Added options to edgepatches to help with
fixing problems in initial 2D correlations.  Changed Stitchalign and
Tomostitch so the volumes are not shifted into alignment during warping but
using piece shifts in Blendmont, to guarantee that Blendmont's overlap zone
analysis includes the actual overlap.  Made all patch models show false color
value display without having to turn it on.

8/29/12: IMOD_4-5-7
8/28/12: Fixed Alterheader FEIPIXEL command, which never worked (In 4.5).

8/28/12: Remove duplicate uitest directories testBB, testmidzone2, and
testunicross.(Bug# 1639)

8/28/12: Boxstartend now sets the origin correctly when extracting to separate
files so models will be interchangeable between full and subvolumes.

8/28/12: Made Tilt set the output file's pixel size from the input stack's
extended header if the input appears not to have a pixel spacing set.

8/28/12: Fixed 3dmodv crash when toggling stereo, transparent background, or
double buffer with multiple models (In 4.5).

8/27/12: IMOD_4-6-9
8/27/12: In Finishjoin, fixed the scaling of the shifts when applying a
refining transform with warping and squeezing of the sample (In 4.5).

8/27/12: In eTomo - Join - Align, fixed a problem with bring up Midas where
the chunks parameters was not passed.(Bug# 1638)

8/23/12: IMOD_4-6-8
8/22/12: IMOD_4-5-6
8/22/12: In eTomo - Final Aligned Stack, fixed the defocus value in the
_simple.defocus file to be in nm instead of microns (In 4.5).(Bug# 1604)

8/22/12: In Beadtrack, use a sobel-based position on second pass only if it is
closer to the expected position; try to make running 4 rounds behave more like